--- a/src/app/share/layout/header/header.component.html
+++ b/src/app/share/layout/header/header.component.html
@@ -1,8 +1,8 @@
 <header class="header">
   <div class="header-left">
     <div>
-      <h1 class="page-title">Dashboard</h1>
-      <p class="page-subtitle">Tổng quan hoạt động kho hôm nay</p>
+      <h1 class="page-title">{{ pageTitle }}</h1>
+      <p class="page-subtitle">{{ pageSubtitle }}</p>
     </div>
   </div>
 
