feat: call api + UI/UX

--- a/src/app/share/layout/sidebar/sidebar.component.html
+++ b/src/app/share/layout/sidebar/sidebar.component.html
@@ -19,6 +19,10 @@
       <span class="nav-icon">🏭</span>
       <span class="nav-label">Warehouse</span>
     </a>
+    <a class="nav-item" routerLink="/location" routerLinkActive="active">
+      <span class="nav-icon">🏭</span>
+      <span class="nav-label">Location</span>
+    </a>
     <a class="nav-item">
       <span class="nav-icon">📦</span>
       <span class="nav-label">Inventory</span>
